<resources>
    <string name="app_name">Pogoda Meteo</string>

    <string name="action_settings">Settings</string>
    <string name="action_show_legend">Show legend</string>
    <string name="action_search_city">Search city</string>
    <string name="action_refresh">Refresh</string>

    <string name="preferences_gps_latitude">0</string>
    <string name="preferences_gps_longitude">0</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_first_start">FirstStartActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>

    <string name="prefs_language">Language</string>
    <string name="language_change">Default Language</string>

    <string name="prefs_grid">Grid</string>
    <string name="grid_change">Default Grid</string>

    <string name="prefs_update">Update Method</string>
    <string name="update_change">Default Update Method</string>

    <string name="prefs_city">City</string>
    <string name="city_change">City</string>

    <string name="general_preferences">General Preferences</string>
    <string name="default_city">462</string>
    <string name="search_hint">Enter the city name</string>
    <string name="title_initial_settings">Initial settings</string>
    <string name="preference_category_language" translatable="false">language_preference</string>
    <string name="preference_language_polish" translatable="false">pl</string>
    <string name="preference_language_english" translatable="false">en</string>
</resources>
