<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="category_general"
        android:title="@string/general_preferences">
        <ListPreference
            android:key="language_preference"
            android:title="@string/prefs_language"
            android:summary="@string/language_change"
            android:entries="@array/preferences_languages"
            android:entryValues="@array/preferences_languages_values" />
        <ListPreference
            android:key="grid_preference"
            android:title="@string/prefs_grid"
            android:summary="@string/grid_change"
            android:entries="@array/preferences_grid"
            android:entryValues="@array/preferences_grid_values" />
        <ListPreference
            android:key="update_preference"
            android:title="@string/prefs_update"
            android:summary="@string/update_change"
            android:entries="@array/preferences_update"
            android:entryValues="@array/preferences_update_values" />
        <Preference
            android:key="city_preference"
            android:title="@string/prefs_city"
            android:summary="@string/city_change" />
        <CheckBoxPreference
            android:key="first_time_launch_preference"
            android:title="First time launch"
            android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>